HelloWorld/force-app/main/default/objects/Visa__c/Visa__c.object-meta.xml
<CustomObject>
    <label>Visa</label>
    <nameField>
        <displayFormat>VID-{000000}</displayFormat>
        <label>Visa ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>visas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>