HelloWorld/force-app/main/default/objects/Visa__c/fields/Amount_paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_paid__c</fullName>
    <label>Amount paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>