HelloWorld/force-app/main/default/objects/Visa__c/fields/Balance_amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_amount__c</fullName>
    <formula>(Amount_paid__c - Visa_fee__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>