HelloWorld/force-app/main/default/objects/Visa__c/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passport</label>
    <referenceTo>Passport__c</referenceTo>
    <relationshipLabel>visas</relationshipLabel>
    <relationshipName>visas</relationshipName>
    <type>Lookup</type>
</CustomField>