HelloWorld/force-app/main/default/objects/Visa__c/fields/Visa_fee__c.field-meta.xml
<CustomField>
    <fullName>Visa_fee__c</fullName>
    <label>Visa fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>